--- a/cap02/ex2_3.html/revenda.html
+++ b/cap02/ex2_3.html/revenda.html
@@ -8,14 +8,19 @@
 </head>
 <body>
     <h1>Revenda de veículos</h1>
-    
+   
     <form>
         <P>Véiculo:
             <input type="text" name="inVeiculo" id="inVeiculo">
-            
         </P>
+        <p>Preço R$:
+            <input type="number" id="inPreco">
+        </p>
+        <button type="submit"> Calcular o Valor</button>
     </form>
-
+    <h3 id="resp1"></h3>
+    <h3 id="resp2"></h3>
+    <h3 id="resp3"></h3>
 
 
 
